fix: horizontal scrolltab not visibile on certain table of dashboard

--- a/src/scss/filejet-scss/dashboard/_new-dashboard.scss
+++ b/src/scss/filejet-scss/dashboard/_new-dashboard.scss
@@ -810,7 +810,7 @@
 
 		@-moz-document url-prefix() {
 			.dataTables_scroll .dataTables_scrollBody {
-				overflow: hidden !important;
+				overflow-y: hidden !important;
 			}
 		}
 
