--- a/src/scss/filejet-scss/styles.css
+++ b/src/scss/filejet-scss/styles.css
@@ -21807,7 +21807,7 @@ table .btn, table .boc-light #boc-ppdf-btns #boc-prev-cancel, .boc-light #boc-pp
 }
 @-moz-document url-prefix() {
   .main-dashboard-v2 .card-table-d2 .dataTables_scroll .dataTables_scrollBody {
-    overflow: hidden !important;
+    overflow-y: hidden !important;
   }
 }
 .main-dashboard-v2 .card-table-d2 .table-status span {
